src/examples/errors/tagged-error-with-message.ts
import { TaggedError } from 'effect/Data';

export class TaggedErrorWithMessage extends TaggedError('WithMessage')<{
  cause?: unknown;
  message?: string;
}> {}
